--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding/<project>=UTF-8
 encoding//Common\ Libraries/IEEE=utf-8
 encoding//Common\ Libraries/IEEE\ Synopsys=utf-8
 encoding//Common\ Libraries/STD=utf-8
